crates/vize_maestro/tests/snapshots/davinci_ts40_projection__davinci_ts40__vue2-native-event__mixed-vue2__legacy-generators-enabled.snap
---
source: crates/vize_maestro/tests/davinci_ts40_projection.rs
expression: record.render()
---
fixture=vue2-native-event
source-sha256=2b2f3214a7683c004e02b705721aa82bfb50a333a21cbf74e35443d1c9d3a47f
[canon]
status=ok:legacy-feature-projection
text=11643:2aa4ba4b599e52b1c462300eecce324e117819c416501f18930e72d892cec8cc
pre-rewrite-text=11643:2aa4ba4b599e52b1c462300eecce324e117819c416501f18930e72d892cec8cc
import-source-map=0:8fb0b48e264b49d7d87ed152b0b8330a9f4f506a1b5d715d076e65d79aa4da42
import-source-map-probes=23288:a6511f7e5f4473c6873ada465316127115e3d1750064f8d20be7b275439207b2
mappings=6:485ccd73e7ea101ff94986cd4c39fab30d9286e475391fac84981ec77ceaaa43
semantic-links=0:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
diagnostics=0:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
authored-hits=0:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
authored-hit-anchors=[]
[content-mapper]
status=ok:vue3-fixed-production
text=15920:3fafef4464ec7749a762dbb3a5b7912d24dc4dcb3b22a3ec38846b2c90b94aee
pre-rewrite-text=0:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
import-source-map=0:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
import-source-map-probes=0:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
mappings=6:e7a45cbe173ea9bbb4d8a71cc30052a83db69ac4e60b464905322f10ec6edda8
semantic-links=0:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
diagnostics=0:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
authored-hits=4:9a1123e4ece33ca3d4afdb228e3a9e1899c4d2b6525b8068fbbc4a5f97da0ccd
authored-hit-anchors=["message", "input"]
[maestro]
status=ok:legacy-feature-projection
text=427:8ac3c8f75d324f830e7c10aaa03aeab1ff5a32218eb40693a05863f96fc14ad3
pre-rewrite-text=0:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
import-source-map=0:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
import-source-map-probes=0:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
mappings=3:a75e531bbaf9e06e1447e0b8203e7d880b4235bd77e4ee8459e023a9201c5337
semantic-links=0:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
diagnostics=0:e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
authored-hits=4:a86c3df107e683dd11d5f05c16b9f7fcabcbcbf405af4b8631f7187f58d69f40
authored-hit-anchors=["message", "input"]
